--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-scripts": "3.4.4",
-    "recoil": "0.0.13"
+    "recoil": "0.0.13",
+    "uuid": "^8.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
