--- a/client/package.json
+++ b/client/package.json
@@ -4,13 +4,16 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.21.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-redux": "^7.2.2",
     "react-scripts": "3.4.4",
-    "recoil": "0.0.13",
+    "redux": "^4.0.5",
     "uuid": "^8.3.1"
   },
   "scripts": {
